# Template-for-FastAPI-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
online_documentation/: swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle-core.js.map  swagger-ui-es-bundle.js  swagger-ui-es-bundle.js.map  swagger-ui.js  swagger-ui.js.map
